@@ -189,6 +189,9 @@ Bug Fixes
 * SOLR-9036: Solr slave is doing full replication (entire index) of index after master restart.
   (Lior Sapir, Mark Miller, shalin)
 
+* SOLR-9058: Makes HashJoinStream and OuterHashJoinStream support different field names in the 
+  incoming streams, eg. fieldA=fieldB. (Dennis Gove, Stephan Osthold)
+
 Optimizations
 ----------------------
 * SOLR-8722: Don't force a full ZkStateReader refresh on every Overseer operation.
